// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`presents a user 1`] = `
Object {
  "avatarUrl": "http://example.com/avatar.png",
  "createdAt": undefined,
  "id": "123",
  "isAdmin": undefined,
  "isSuspended": undefined,
  "name": "Test User",
}
`;

exports[`presents a user without slack data 1`] = `
Object {
  "avatarUrl": null,
  "createdAt": undefined,
  "id": "123",
  "isAdmin": undefined,
  "isSuspended": undefined,
  "name": "Test User",
}
`;
